# Beginner-s-Project-in-ML

./: README.md  anaconda.md  项目结构解析.md
Projects/: README.md
Projects/material_prediction/: README.md  config.py  main.py  requirements.txt
Projects/material_prediction/data/: encoded_data.xlsx
Projects/wind_power_prediction/: README.md  data.csv  environment.yml  requirements.txt  run.py  test_environment.py  wind_power_prediction_readme.md
Projects/wind_power_prediction/docs/: PROJECT_STRUCTURE.md
Projects/wind_power_prediction/src/: main.py
Projects/wind_power_prediction/src/models/: deep_learning.py  random_forest.py
Projects/wind_power_prediction/src/utils/: data_processing.py  feature_engineering.py  model_utils.py
Projects/项目一/: .gitignore  Makefile  config.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  项目详细说明文档.md
Projects/项目一/data/: README.txt
Projects/项目一/docs/: 模型文件使用指南.md  项目文件结构说明.md
Projects/项目一/scripts/: check_data_types.py  check_target_distribution.py
Projects/项目一/src/: data_preprocessing.py  feature_selection.py  font_config.py  model_training.py  modeling.py  shap_analysis.py
Projects/项目一/tests/: test_data_preprocessing.py
Projects/项目二/: PROJECT_STRUCTURE.md  README.md  environment.yml  requirements.txt  run.py  项目详细说明文档.md
Projects/项目二/results/logs/: .gitkeep
Projects/项目二/results/models/: .gitkeep
Projects/项目二/results/plots/: .gitkeep
Projects/项目二/src/: main.py
Projects/项目二/src/models/: __init__.py  deep_learning.py  random_forest.py
Projects/项目二/src/utils/: __init__.py  data_processing.py  feature_engineering.py  model_utils.py  visualization.py
Projects/项目二/tests/: run_training.py  test_dependencies.py  test_environment.py  test_quick_mode.py
Projects/项目四/: .gitignore  README.md  config.py  main.py  model.py  requirements.txt  train.py  项目详细说明文档.md
Projects/项目四/data/: filtered_metadata.csv  test_data.csv  train_data.csv  val_data.csv
